--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 													</span>
 													<span class="elementor-grid-item">
 														<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-c640f9e"
-															href="https://t.me/BorkOnSui" target="_blank">
+															href="https://t.me/BorkOnSui_Portal" target="_blank">
 															<span class="elementor-screen-only">Telegram-plane</span>
 															<svg class="e-font-icon-svg e-fab-telegram-plane"
 																viewBox="0 0 448 512"
@@ -1096,7 +1096,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-none"
-														data-text="Go" href="https://t.me/BorkOnSui">
+														data-text="Go" href="https://t.me/BorkOnSui_Portal">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">JOIN BORK&#039;S
@@ -1370,7 +1370,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go" href="https://t.me/BorkOnSui">
+														data-text="Go" href="https://t.me/BorkOnSui_Portal">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">JOIN NOW</span>
@@ -1765,7 +1765,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go" href="https://t.me/BorkOnSui">
+														data-text="Go" href="https://t.me/BorkOnSui_Portal">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">TELEGRAM</span>
