--- a/index.html
+++ b/index.html
@@ -715,7 +715,8 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect elementor-animation-float"
-														data-text="Go" href="https://movepump.com/token/TBA">
+														data-text="Go"
+														href="https://movepump.com/token/0x52de348b0dd8253c756213a8ecb46364291d4adb7191d60a0b6d97a0e233b736::borks::BORKS">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">BUY NOW</span>
@@ -741,7 +742,8 @@
 														data-text="Go" href="">
 
 														<span class="wpr-button-content">
-															<span class="wpr-button-text">CA:TBA</span>
+															<span
+																class="wpr-button-text">CA:0x52de348b0dd8253c756213a8ecb46364291d4adb7191d60a0b6d97a0e233b736::borks::BORKS</span>
 
 														</span>
 													</a>
@@ -1823,7 +1825,8 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go" href="https://movepump.com/token/TBA">
+														data-text="Go"
+														href="https://movepump.com/token/0x52de348b0dd8253c756213a8ecb46364291d4adb7191d60a0b6d97a0e233b736::borks::BORKS">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">BUY NOW</span>
@@ -1852,7 +1855,8 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go" href="https://movepump.com/token/TBA">
+														data-text="Go"
+														href="https://movepump.com/token/0x52de348b0dd8253c756213a8ecb46364291d4adb7191d60a0b6d97a0e233b736::borks::BORKS">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">CHART</span>
