--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 													</span>
 													<span class="elementor-grid-item">
 														<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-c640f9e"
-															href="https://t.me/BorkOnSui_Channel" target="_blank">
+															href="https://t.me/Bork_Channel" target="_blank">
 															<span class="elementor-screen-only">Telegram-plane</span>
 															<svg class="e-font-icon-svg e-fab-telegram-plane"
 																viewBox="0 0 448 512"
@@ -715,8 +715,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect elementor-animation-float"
-														data-text="Go"
-														href="https://movepump.com/token/0x52de348b0dd8253c756213a8ecb46364291d4adb7191d60a0b6d97a0e233b736::borks::BORKS">
+														data-text="Go" href="https://movepump.com/token/TBA">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">BUY NOW</span>
@@ -742,8 +741,7 @@
 														data-text="Go" href="">
 
 														<span class="wpr-button-content">
-															<span
-																class="wpr-button-text">CA:0x52de348b0dd8253c756213a8ecb46364291d4adb7191d60a0b6d97a0e233b736::borks::BORKS</span>
+															<span class="wpr-button-text">CA:TBA</span>
 
 														</span>
 													</a>
@@ -1098,7 +1096,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-none"
-														data-text="Go" href="https://t.me/BorkOnSui_Channel">
+														data-text="Go" href="https://t.me/Bork_Channel">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">JOIN BORK&#039;S
@@ -1372,7 +1370,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go" href="https://t.me/BorkOnSui_Channel">
+														data-text="Go" href="https://t.me/Bork_Channel">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">JOIN NOW</span>
@@ -1767,7 +1765,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go" href="https://t.me/BorkOnSui_Channel">
+														data-text="Go" href="https://t.me/Bork_Channel">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">TELEGRAM</span>
@@ -1825,8 +1823,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go"
-														href="https://movepump.com/token/0x52de348b0dd8253c756213a8ecb46364291d4adb7191d60a0b6d97a0e233b736::borks::BORKS">
+														data-text="Go" href="https://movepump.com/token/TBA">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">BUY NOW</span>
@@ -1855,8 +1852,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go"
-														href="https://movepump.com/token/0x52de348b0dd8253c756213a8ecb46364291d4adb7191d60a0b6d97a0e233b736::borks::BORKS">
+														data-text="Go" href="https://movepump.com/token/TBA">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">CHART</span>
