--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 													</span>
 													<span class="elementor-grid-item">
 														<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-c640f9e"
-															href="https://t.me/Bork_Channel" target="_blank">
+															href="https://t.me/BorkSui_Channel" target="_blank">
 															<span class="elementor-screen-only">Telegram-plane</span>
 															<svg class="e-font-icon-svg e-fab-telegram-plane"
 																viewBox="0 0 448 512"
@@ -1098,7 +1098,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-none"
-														data-text="Go" href="https://t.me/Bork_Channel">
+														data-text="Go" href="https://t.me/BorkSui_Channel">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">JOIN BORK&#039;S
@@ -1372,7 +1372,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go" href="https://t.me/Bork_Channel">
+														data-text="Go" href="https://t.me/BorkSui_Channel">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">JOIN NOW</span>
@@ -1767,7 +1767,7 @@
 
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
-														data-text="Go" href="https://t.me/Bork_Channel">
+														data-text="Go" href="https://t.me/BorkSui_Channel">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">TELEGRAM</span>
