--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect elementor-animation-float"
 														data-text="Go"
-														href="https://movepump.com/token/0xa2558df18068268df05a7d595ed8453512de377c97a445be51d2b4913e7ab362::borks::BORKS">
+														href="https://movepump.com/token/0x9a00be6742895374b5e7715783f8743c2b3fbc33db3b537b4bfb91b14cb9cb0b::bork::BORK">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">BUY NOW</span>
@@ -743,7 +743,7 @@
 
 														<span class="wpr-button-content">
 															<span
-																class="wpr-button-text">CA:0xa2558df18068268df05a7d595ed8453512de377c97a445be51d2b4913e7ab362::borks::BORKS</span>
+																class="wpr-button-text">CA:0x9a00be6742895374b5e7715783f8743c2b3fbc33db3b537b4bfb91b14cb9cb0b::bork::BORK</span>
 
 														</span>
 													</a>
@@ -1826,7 +1826,7 @@
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
 														data-text="Go"
-														href="https://movepump.com/token/0xa2558df18068268df05a7d595ed8453512de377c97a445be51d2b4913e7ab362::borks::BORKS">
+														href="https://movepump.com/token/0x9a00be6742895374b5e7715783f8743c2b3fbc33db3b537b4bfb91b14cb9cb0b::bork::BORK">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">BUY NOW</span>
@@ -1856,7 +1856,7 @@
 												<div class="wpr-button-wrap elementor-clearfix">
 													<a class="wpr-button wpr-button-effect wpr-button-isi-left"
 														data-text="Go"
-														href="https://movepump.com/token/0xa2558df18068268df05a7d595ed8453512de377c97a445be51d2b4913e7ab362::borks::BORKS">
+														href="https://movepump.com/token/0x9a00be6742895374b5e7715783f8743c2b3fbc33db3b537b4bfb91b14cb9cb0b::bork::BORK">
 
 														<span class="wpr-button-content">
 															<span class="wpr-button-text">CHART</span>
